@@ -1,24 +1,0 @@
-@comment $NetBSD: PLIST,v 1.3 2020/10/08 17:13:12 khorben Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/bintrees/__init__.py
-${PYSITELIB}/bintrees/__init__.pyc
-${PYSITELIB}/bintrees/__init__.pyo
-${PYSITELIB}/bintrees/abctree.py
-${PYSITELIB}/bintrees/abctree.pyc
-${PYSITELIB}/bintrees/abctree.pyo
-${PYSITELIB}/bintrees/avltree.py
-${PYSITELIB}/bintrees/avltree.pyc
-${PYSITELIB}/bintrees/avltree.pyo
-${PYSITELIB}/bintrees/bintree.py
-${PYSITELIB}/bintrees/bintree.pyc
-${PYSITELIB}/bintrees/bintree.pyo
-${PYSITELIB}/bintrees/cython_trees.so
-${PYSITELIB}/bintrees/rbtree.py
-${PYSITELIB}/bintrees/rbtree.pyc
-${PYSITELIB}/bintrees/rbtree.pyo
-${PYSITELIB}/bintrees/treeslice.py
-${PYSITELIB}/bintrees/treeslice.pyc
-${PYSITELIB}/bintrees/treeslice.pyo
