@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.7184 2023/11/23 09:02:15 adam Exp $
+$NetBSD: CHANGES-2023,v 1.7185 2023/11/23 09:03:33 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -10309,3 +10309,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Updated net/py-zeroconf to 0.127.0 [wiz 2023-11-23]
 	Updated devel/py-bitstring to 4.1.3 [adam 2023-11-23]
 	Updated devel/py-aiostream to 0.5.2 [adam 2023-11-23]
+	Removed devel/py-bintrees [wiz 2023-11-23]
